# docker-cli-demo

./: Dockerfile  README.md  pyproject.toml
docker_cli_demo/: cli.py
docker_cli_demo/lib/: demo.py
