[tool.poetry]
name = "docker-cli-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "docker_cli_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.4.0"

[tool.poetry.scripts]
cli = "docker_cli_demo.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
